kyy-k8s-config/src/app/backend/wx-article-client/wx-article-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wx-article-client
  name: wx-article-client
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: wx-article-client
