kyy-k8s-config/src/app/backend/wx-article-client/wx-article-client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: wx-article-client
  name: wx-article-client
spec:
  rules:
    - host: wxmp.kaoyaya.com
      http:
        paths:
          - backend:
              serviceName: wx-article-client
              servicePort: 8080
